--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import "../styles.css";
 				class="mt-6 max-w-lg mx-auto p-4 bg-gray-800 rounded-lg shadow-lg"
 			>
 				<h2 class="text-2xl font-semibold">
-					Sample 'Kitty Dreams' Cafe
+					Sample 'Kitty Dreams' Cafe UPDATE
 				</h2>
 				<p>Meowazing capuccino! 🐱🐾</p>
 			</article>
