Added cursor kitty

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 <header class="site-header">
     <h1>
-        We are - Kotyane, and we are going review any stuff that could touch!
+        We are Kotyane, and we're here to review anything that might catch our
+        interest!
     </h1>
 </header>
 
