--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import PixelCat from "../components/PixelCat.astro";
+import CursorKitty from "../components/CursorKitty.astro";
 ---
 
 <html lang="ru">
@@ -19,6 +20,7 @@ import PixelCat from "../components/PixelCat.astro";
 			</div>
 		</main>
 
+		<CursorKitty />
 		<PixelCat />
 	</body>
 </html>
